@@ -19,12 +19,12 @@ public class WebMvcConfig extends WebMvcConfigurerAdapter {
         registry.addInterceptor(new HandlerInterceptorAdapter() {
             @Override
             public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-                System.out.println("==>ImportExportService中的拦截器URI: "+request.getRequestURI() );
-                Long userId = new Long(request.getHeader(SessionConstant.USER_ID));
-                String username = request.getHeader(SessionConstant.USERNAME);
-                String name = request.getHeader(SessionConstant.NAME);
-                Integer userType = Integer.valueOf(request.getHeader(SessionConstant.USER_TYPE));
-                RequestContextUtils.set(userId, username, name, userType);
+                System.out.println("==>ExcelService中的拦截器URI: "+request.getRequestURI() );
+//                Long userId = new Long(request.getHeader(SessionConstant.USER_ID));
+//                String username = request.getHeader(SessionConstant.USERNAME);
+//                String name = request.getHeader(SessionConstant.NAME);
+//                Integer userType = Integer.valueOf(request.getHeader(SessionConstant.USER_TYPE));
+//                RequestContextUtils.set(userId, username, name, userType);
                 return true;
             }
 
